# devin-test-run

./: README.md  app.py  fly.toml  main.py  netlify.toml  pyproject.toml  requirements.txt
weather-app/: index.js  package-lock.json  package.json
weather-app/src/: App.js
weather_backend/: .env  main.py  pyproject.toml
weather_backend/weather_backend/: app.py
